# SWGTK

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  README.md  vcpkg.json
CardTableSimulator/: CMakeLists.txt
CardTableSimulator/include/: CardTableSimulator.hpp  Component.hpp  Entity.hpp  ErrCodes.hpp  Font.hpp  Input.hpp  SDLApp.hpp  Scene.hpp  Texture.hpp
CardTableSimulator/include/scenes/: MenuScene.hpp  Scene.hpp
CardTableSimulator/include/systems/: UI.hpp
CardTableSimulator/src/: CardTableSimulator.cpp  Component.cpp  Entity.cpp  Font.cpp  Input.cpp  SDLApp.cpp  Scene.cpp  Texture.cpp  main.cpp
CardTableSimulator/src/scenes/: MenuScene.cpp  Scene.cpp
CardTableSimulator/src/systems/: UI.cpp
SWGTK/: CMakeLists.txt
SWGTK/editor/include/: NKFont.hpp  UI.hpp
SWGTK/editor/src/: NKFont.cpp  UI.cpp  main.cpp
SWGTK/engine/: SDL2DRenderer.cmake
SWGTK/engine/include/: Component.hpp  ErrCodes.hpp  Input.hpp  NKUI.hpp  Project.hpp  RenderWrap.hpp  SDLApp.hpp  Scene.hpp  TTFFont.hpp  Texture.hpp
SWGTK/engine/include/swgtk/: App.hpp  ErrCodes.hpp  FontGroup.hpp  FontStyle.hpp  Input.hpp  Lua.hpp  LuaGame.hpp  Macros.hpp  Math.hpp  RendererBase.hpp  RenderingDevice.hpp  SDLHW2D.hpp  Scene.hpp  Simple2DRenderer.hpp  Surface.hpp  TTFFont.hpp  Texture.hpp  Timer.hpp  Utility.hpp
SWGTK/engine/include/swgtk/internal/: LuaGame.cpp  LuaGame.hpp  asan.supp  engine.lua  strings.h  swgtk.lua
SWGTK/engine/src/: App.cpp  Component.cpp  FontGroup.cpp  Input.cpp  Lua.cpp  LuaGame.cpp  NKUI.cpp  RenderWrap.cpp  SDLApp.cpp  SDLHW2D.cpp  Scene.cpp  Simple2DRenderer.cpp  TTFFont.cpp  Texture.cpp  nuklear.cpp
SWGTK/include/: Component.hpp  Font.hpp  Input.hpp  RenderWrap.hpp  SDLApp.hpp  Scene.hpp  Texture.hpp  UI.hpp
SWGTK/include/scenes/: MenuScene.hpp  Scene.hpp
SWGTK/include/systems/: UI.hpp
SWGTK/lua_runner/: CMakeLists.txt  common.hpp  swl.cpp  swl2d.cpp
SWGTK/src/: Font.cpp  Input.cpp  MenuScene.cpp  RenderWrap.cpp  SDLApp.cpp  Scene.cpp  Texture.cpp  UI.cpp  main.cpp  nuklear.cpp
SWGTK/src/scenes/: MenuScene.cpp  Scene.cpp
SWGTK/src/systems/: UI.cpp
SWGTK/tests/: CMakeLists.txt
SWGTK/tests/assets/data/: normal_spritesheet.json
SWGTK/tests/config/ui/: test_window.lua
SWGTK/tests/include/: NKFont.hpp  OpenScene.hpp  Tests.hpp  UI.hpp
SWGTK/tests/src/: OpenScene.cpp  Project.hpp  Tests.cpp  TextTest.cpp  TextTest.hpp  UI.cpp  main.cpp  nuklear.cpp  sandbox.cpp
SWGTK/tests/test_cpp/: CMakeLists.txt  Particles.cpp  TextTest.cpp  TextTest.hpp  particles.cmake  text.cmake
SWGTK/tests/test_lua/: CMakeLists.txt  MultiTestRoot.lua  TextTest.lua
SWGTK/tests/text_cpp/: CMakeLists.txt  TextTest.cpp  TextTest.hpp
SWGTK/tests/text_lua/: CMakeLists.txt  TextTest.lua  TextTestLua.cpp
cmake/: CMakeOptions.cmake  Config.cmake  GNUOptions.cmake  LuaBindings.cmake  MSVCOptions.cmake
config/data/: welcome_screen.lua
config/ui/: hello.lua  test_window.lua
examples/: CMakeLists.txt  Particles.cpp  Particles.hpp  Text.cpp  Text.hpp  particles.cmake  text.cmake
examples/cpp/: CMakeLists.txt  Particles.cpp  Particles.hpp  Text.cpp  Text.hpp  particles.cmake  text.cmake
examples/lua/: CMakeLists.txt
tests/: CMakeLists.txt
tests/include/: TestRenderer.hpp
tests/src/: MathTests.cpp
